syntax = "proto3";
package edu.cdl.iot.protocol;

message SensorData  {
  string projectGuid = 1;
  string sensor_id = 2;
  string timestamp = 3;
  map<string, double> doubles = 4;
  map<string, string> strings = 5;
  map<string, int32> integers = 6;
}